--- a/README
+++ b/README
@@ -1,17 +1,48 @@
+== Hardmock
 
-Sun Dec 10 09:15:26 EST 2006
-crosby
+Strict, ordered mock objects using very lightweight syntax in your tests.
 
-This was CMock, is now Hardmock.
 
-CHANGES
-* "expects" replaces "expect" ("expect" now raises Hardmock::DeprecationError)
-* "verify_mocks" is now implicit in teardown, you needn't call it anymore
-* Mocking methods that Mock would otherwise inherit from Object (eg, to_s) is now possible
-* require 'hardmock' is all that's required to use the library now; no need to include in TestCase
+== How
 
-TODO:
-* Release as GEM
-* Release as plugin
-* Mock actual methods on actual objects or classes or modules?
-* Achieve clarity on "yields"
+The basic procedure for using Hardmock in your tests is:
+
+* require 'hardmock'
+* Create some mocks
+* Setup some expectations
+* Execute the target code
+* Verification of calls is automatic in =teardown=
+
+The expectations you set when using mocks are <b>strict</b> and <b>ordered</b>.
+Expectations you declare by creating and using mocks are all considered together.
+
+* Hardmock::Mock#expects will show you more examples
+* Hardmock::SimpleExpectation will teach you more about expectation methods
+
+== Example
+
+  create_mocks :garage, :car
+
+  # Set some expectations
+  @garage.expects.open_door
+  @car.expects.start(:choke)
+  @car.expects.drive(:reverse, 5.mph)
+
+  # Execute the code (this code is usually, obviously, in your class under test)
+  @garage.open_door  
+  @car.start :choke
+  @car.drive :reverse, 5.mph
+
+  verify_mocks # OPTIONAL, teardown will do this for you
+
+Expects <tt>@garage.open_door</tt>, <tt>@car.start(:choke)</tt> and <tt>@car.drive(:reverse, 5.mph)</tt> to be called in that order, with those specific arguments.
+* Violations of expectations, such as mis-ordered calls, calls on wrong objects, or incorrect methods result in Hardmock::ExpectationError
+* <tt>verify_mocks</tt> will raise VerifyError if not all expectations have been met.
+
+== Download and Install
+
+* Homepage: http://hardmock.rubyforge.org
+* GEM or TGZ or ZIP: http://rubyforge.org/frs/?group_id=2742
+* Rails plugin: script/plugin install 
+* SVN access: svn co svn://rubyforge.org/var/svn/hardmock/trunk
+* Developer SVN access: svn co svn://developername@rubyforge.org/var/svn/hardmock/trunk
