--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Hardmock 1.2.3
+
+Sat Apr 28 01:16:15 EDT 2007
+
+* Re-release of 1.2.2 (which was canceled)... tasks moved to lib/tasks
+
 Hardmock 1.2.2
 
 Sat Apr 28 00:41:30 EDT 2007
