fixing addresses at bottom of README
git-svn-id: http://hardmock.rubyforge.org/svn/trunk@60 48d1a0da-1ed6-4f58-8415-457aad5d95da

--- a/README
+++ b/README
@@ -47,5 +47,5 @@ Expects <tt>@garage.open_door</tt>, <tt>@car.start(:choke)</tt> and <tt>@car.dri
 * Developer SVN access: svn co svn://developername@rubyforge.org/var/svn/hardmock/trunk
 
 == Author
-* David Crosby (crosby at <a href="http://atomicobject.com">atomicobject.com</a>)
+* David Crosby crosby at http://atomicobject.com
 * (c) 2006,2007 Atomic Object LLC 
