--- a/README
+++ b/README
@@ -46,6 +46,25 @@ Expects <tt>@garage.open_door</tt>, <tt>@car.start(:choke)</tt> and <tt>@car.dri
 * SVN access: svn co svn://rubyforge.org/var/svn/hardmock/trunk
 * Developer SVN access: svn co svn://developername@rubyforge.org/var/svn/hardmock/trunk
 
+== Setup for Test::Unit
+
+  require 'hardmock'
+  require 'assert_error' # OPTIONAL: this adds the TestUnit extension 'assert_error' 
+
+NOTE: If installed as a Rails plugin, init.rb does this for you... nothing else is needed.
+
+== Setup for RSpec
+
+Get this into your spec helper or environment or Rakefile or wherever you prefer:
+
+  Spec::Runner.configure do |configuration|
+    configuration.include Hardmock
+    configuration.after(:each) {verify_mocks}
+  end
+
+This puts the implicit conveniences into your spec context, like "create_mocks" etc, and also provides for automatic
+"verify_mocks" after each Example is run.
+
 == Author
 * David Crosby crosby at http://atomicobject.com
 * (c) 2006,2007 Atomic Object LLC 
