added alias for should_receive => expects and and_return => returns
git-svn-id: http://hardmock.rubyforge.org/svn/trunk@84 48d1a0da-1ed6-4f58-8415-457aad5d95da

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Hardmock 1.3.5
+
+* Aliased should_receive => expects and and_return => returns for easier transition from rspec mock and flexmock users.
+
 Hardmock 1.3.4
 
 * Prevents accidental stubbing and mocking on NilClasses
