--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Hardmock 1.3.6
+
+* BUG FIX: In Rails apps (and others) Hardmock and Fixtures battled viciously over "setup" and "teardown" and "method_added" (and any other clever test enhancement tool, namely Mocha) causing unpredictable results, notably failure to auto-verify mocks after teardown (leading to false positive tests).
+** The newly-added TestUnitBeforeAfter provides TestCase.before_setup and TestCase.after_teardown -- formal test wrapping hooks -- lets Hardmock provide its preparation and auto-verify behavior without contending for setup/teardown supremacy.  
+
 Hardmock 1.3.5
 
 * Aliased should_receive => expects and and_return => returns for easier transition from rspec mock and flexmock users.
