--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+Wed Jan  5 01:50:24 EST 2011
+crosby
+
+Hardmock is being "finalized"... Atomic probably won't be maintaining or building on this library beyond v1.3.8
+
 Thu Dec  6 13:09:48 EST 2007
 crosby
 
