--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Hardmock 1.3.8
+
+* Ruby 1.9 compatibility: patched stubbing module and tests to get Hardmock working in Ruby 1.9.2 and MiniTest
+* FINAL VERSION OF HARDMOCK -- see Readme
+
 Hardmock 1.3.7
 
 * BUG FIX: expects! could not setup expectations for more than one concrete method on an object, since the method aliasing and rewriting was only taking place when the background mock instance was first created.  This logic has been updated and now you can do all the things you'd expect.
