slight tweak to rubydoc link

--- a/README.rdoc
+++ b/README.rdoc
@@ -52,7 +52,7 @@ Expects <tt>@garage.open_door</tt>, <tt>@car.start(:choke)</tt> and <tt>@car.dri
 * Install: gem install hardmock
 * Homepage: http://atomicobject.github.com/hardmock
 * Rubygems.org: http://rubygems.org/gems/hardmock
-* API documentation: http://rubydoc.info/gems/hardmock/1.3.7/frames
+* API documentation: http://rubydoc.info/gems/hardmock/frames
 
 == Setup for Test::Unit
 
